--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
     </header>
 
     <section id="about">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>About Us</h2>
         <img src="Home.PNG" class="fade-image">
         <link rel="stylesheet" href="fade-effect-hover.css">
     </section>
 
     <section id="services">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Services</h2>
         <img src="Slide7.PNG" class="fade-image">
         <img src="Slide8.PNG" class="fade-image">
@@ -87,11 +89,13 @@
     </section>
 
     <section id="contact">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Contact</h2>
         <img src="Slide15.PNG" class="fade-image">
     </section>
 
     <section id="clients">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <img src="Slide3.PNG" class="fade-image">
         <img src="Slide4.PNG" class="fade-image">
         <img src="Slide5.PNG" class="fade-image">
@@ -99,6 +103,7 @@
     </section>
     
     <section id="partners">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Partners</h2>
         <img src="Slide9.PNG" class="fade-image">
         <img src="Slide14.PNG" class="fade-image">
