--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             padding: 10px 0;
             margin-top: 20px;
         }
+        .responsive-image {
+            width: 100%; /* Image fills the width of its container */
+            height: 300px; /* Set a specific height or use 'auto' */
+            object-fit: cover; /* Ensures the image covers the container without distortion */
+        }
     </style>
 </head>
 <body>
