--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         .responsive-image {
             width: 100%; /* Image fills the width of its container */
-            height: 300px; /* Set a specific height or use 'auto' */
+            height: auto; /* Set a specific height or use 'auto' */
             object-fit: cover; /* Ensures the image covers the container without distortion */
         }
     </style>
@@ -76,42 +76,37 @@
     </header>
 
     <section id="about">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>About Us</h2>
         <img src="Home.PNG" class="fade-image">
         <link rel="stylesheet" href="fade-effect-hover.css">
     </section>
 
     <section id="services">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Services</h2>
-        <img src="Slide7.PNG" class="fade-image">
-        <img src="Slide8.PNG" class="fade-image">
-        <img src="Slide10.PNG" class="fade-image">
-        <img src="Slide11.PNG" class="fade-image">
-        <img src="Slide13.PNG" class="fade-image">
+        <img src="Slide7.PNG" class="responsive-image">
+        <img src="Slide8.PNG" class="responsive-image">
+        <img src="Slide10.PNG" class="responsive-image">
+        <img src="Slide11.PNG" class="responsive-image">
+        <img src="Slide13.PNG" class="responsive-image">
 
     </section>
 
     <section id="contact">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Contact</h2>
-        <img src="Slide15.PNG" class="fade-image">
+        <img src="Slide15.PNG" class="responsive-image">
     </section>
 
     <section id="clients">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <img src="Slide3.PNG" class="fade-image">
-        <img src="Slide4.PNG" class="fade-image">
-        <img src="Slide5.PNG" class="fade-image">
-        <img src="Slide6.PNG" class="fade-image">
+        <img src="Slide3.PNG" class="responsive-image">
+        <img src="Slide4.PNG" class="responsive-image">
+        <img src="Slide5.PNG" class="responsive-image">
+        <img src="Slide6.PNG" class="responsive-image">
     </section>
     
     <section id="partners">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h2>Partners</h2>
-        <img src="Slide9.PNG" class="fade-image">
-        <img src="Slide14.PNG" class="fade-image">
+        <img src="Slide9.PNG" class="responsive-image">
+        <img src="Slide14.PNG" class="responsive-image">
     </section>
 
     <footer>
