--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <img src="Home.PNG" class="responsive-image">
+        <img src="Slide2.PNG" class="responsive-image">
         <link rel="stylesheet" href="fade-effect-hover.css">
     </section>
 
