--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
             </ul>
         </nav>
     </header>
+
+    <div class="image-container" id="image-container">
+        <img src="Front.png" alt="Fading Image">
+    </div>
+
     <main>
         <section id="about">
             <h2>About Us</h2>
-            <img src="Slide2.PNG" class="fade-image">
+            <img src="Slide2.PNG" class="responsive-image">
         </section>
         <section id="services">
             <h2>Services</h2>
