--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Top Navigation Bar -->
     <div class="navbar">
+        <button class="hamburger">☰</button>
         <ul>
             <li><a href="#" data-slide="0">Home</a></li>
             <li><a href="#" data-slide="1">About Us</a></li>
