--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Slider with Top Navigation</title>
+    <title>Protecpro.Solutions</title>
     <link rel="stylesheet" href="transparent-header.css">
 </head>
 <body>
